@@ -129,6 +129,9 @@ Trunk -  Unreleased
     HIVE-844. Remove ASTPartitionPruner from genmapredTasks.
     (Namit Jain via zshao)
 
+    HIVE-817. hive.hwi.war.file incorrectly tries to use environment variables to locate war file
+    (Edward Capriolo via namit)
+
 Release 0.4.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
